<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sortByBook"
        android:title="@string/sort_by_bookName"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortByDate"
        android:title="@string/sort_by_date"
        app:showAsAction="never"/>

    <item android:id="@+id/filterByType"
        android:title="@string/filter_by_bookType"
        app:showAsAction="never"/>
    <item
        android:id="@+id/filterByAuthor"
        android:title="@string/filter_by_author"
        app:showAsAction="never"/>

    <item android:id="@+id/filterByGenre"
        android:title="@string/filter_by_bookGenre"
        app:showAsAction="never"/>

</menu>